--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
     "lib": "lib",
     "test": "test"
   },
+  "engines": {
+    "node": "8.9.4",
+    "npm": "6.1.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack --watch --mode=development",
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
@@ -32,5 +38,8 @@
   "bugs": {
     "url": "https://github.com/JamaicaF/cloudcast/issues"
   },
-  "homepage": "https://github.com/JamaicaF/cloudcast#readme"
+  "homepage": "https://github.com/JamaicaF/cloudcast#readme",
+  "devDependencies": {
+    "webpack-cli": "^3.0.8"
+  }
 }
