--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "webpack": "^4.15.1"
+    "webpack": "^4.15.1",
+    "webpack-cli": "^3.0.8"
   },
   "version": "1.0.0",
   "main": "index.js",
@@ -41,8 +42,5 @@
   "bugs": {
     "url": "https://github.com/JamaicaF/cloudcast/issues"
   },
-  "homepage": "https://github.com/JamaicaF/cloudcast#readme",
-  "devDependencies": {
-    "webpack-cli": "^3.0.8"
-  }
+  "homepage": "https://github.com/JamaicaF/cloudcast#readme"
 }
